Fix display on mobile

--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  width: 100%;
 }
 
 .message-container {
